revised code to reduce performance warning.